--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,5 +11,17 @@
     <extensions defaultExtensionNs="com.intellij">
         <toolWindow factoryClass="com.github.hbuzxl.intellijplatformplugindemo.toolWindow.MyToolWindowFactory" id="MyToolWindow"/>
         <postStartupActivity implementation="com.github.hbuzxl.intellijplatformplugindemo.startup.MyProjectActivity" />
+        <notificationGroup id="Plugin Notifications" displayType="BALLOON" isLogByDefault="true"/>
     </extensions>
+
+    <actions>
+        <action id="com.github.hbuzxl.intellijplatformplugindemo.StartAcpAction"
+                class="com.github.hbuzxl.intellijplatformplugindemo.StartAcpAction"
+                text="Start ACP Session"
+                description="Start a demo ACP session via codex-acp">
+            <add-to-group group-id="ToolsMenu" anchor="last"/>
+        </action>
+
+    </actions>
+
 </idea-plugin>
